--- a/Compito_AngularJs/assets/partials/home.htm
+++ b/Compito_AngularJs/assets/partials/home.htm
@@ -10,7 +10,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h3>
-				Su questa pagina troverai tutte le informazioni su di me! Ovvero Pippo! Non solo... Avrai anche l'opportunità di iscriverti per entrare a
+				Su questa pagina troverai tutte le informazioni su di me! Ovvero Pippo! Non solo... Avrai anche l'opportunita' di iscriverti per entrare a
 				far parte della nostra community.
 				<br>
 				<br>
