--- a/Compito_AngularJs/assets/partials/presentation.htm
+++ b/Compito_AngularJs/assets/partials/presentation.htm
@@ -5,10 +5,10 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-1">
+	<div class="col-md-2">
 		<img alt="Pippo" src="assets/images/pippo.jpg" class="img-responsive borderBlack">
 	</div>
-	<div class="col-md-11">
+	<div class="col-md-10">
 		<ul class="list-unstiled">
 			<li>
 				<span class="label label-default">Nome: </span>
@@ -23,7 +23,7 @@
 				<span data-toggle="tooltip" data-placement="right" title="gg/mm/aaaa">11/11/1900</span>
 			</li>
 			<li>
-				<span class="label label-info">Città: </span>
+				<span class="label label-info">Citta': </span>
 				<span>Roma</span>
 			</li>
 			<li>
