--- a/Compito_AngularJs/assets/partials/form.htm
+++ b/Compito_AngularJs/assets/partials/form.htm
@@ -3,8 +3,9 @@
 		<div class="panel-heading text-center">
 			<h1>Inserisci i tuoi dati:</h1>
 		</div>
-		<div class="panel-body">
-			<form class="form-horizontal" ng-model="form">
+		<form class="form-horizontal" ng-model="form">
+			<div class="panel-body">
+
 				<div class="row verticalSpace">
 					<div class="col-md-4">
 						<label class="maroon">Nome</label>
@@ -16,7 +17,7 @@
 					</div>
 					<div class="col-md-4">
 						<label class="maroon">Data</label>
-						<div class="input-group date datepicker" data-date-format="dd-mm-yyyy">
+						<div class="input-group date datepicker" id="calendar" data-date-format="dd-mm-yyyy">
 							<input type="text" class="form-control" placeholder="dd/mm/yyyy" ng-model="params.birthday" />
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-calendar"></span>
@@ -38,7 +39,6 @@
 					<div class="col-md-4">
 						<label class="maroon">Citta'</label>
 						<select class="form-control" ng-model="params.city">
-							<option value="" disabled selected>Seleziona una citta'</option>
 							<option value="Rome">Rome</option>
 							<option value="Paris">Paris</option>
 							<option value="New York">New York</option>
@@ -69,18 +69,18 @@
 						</label>
 					</div>
 				</div>
-		</div>
-		<div class="panel-footer">
-			<div class="row">
-				<div class="col-md-12">
-					<div align="center">
-						<button type="submit" class="btn btn-default" ng-click="createPerson(params);resetForm()">Conferma</button>
-						<button class="btn btn-default" ng-click="show=!show" data-toggle="collapse" data-target="#collapse-tabella" aria-expanded="false">Visualizza altri
-							utenti</button>
+			</div>
+			<div class="panel-footer">
+				<div class="row">
+					<div class="col-md-12">
+						<div align="center">
+							<button type="submit" class="btn btn-default" ng-click="createPerson(params);resetForm()">Conferma</button>
+							<button class="btn btn-default" ng-click="show=!show" data-toggle="collapse" data-target="#collapse-tabella" aria-expanded="false">Visualizza
+								altri utenti</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 		</form>
 	</div>
 	<div class="panel" ng-show="show&&showTable()">
