--- a/Compito_AngularJs/assets/partials/presentation.htm
+++ b/Compito_AngularJs/assets/partials/presentation.htm
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
 	<div class="col-md-2">
-		<img alt="Pippo" src="assets/images/pippo.jpg" class="img-responsive borderBlack">
+		<img class="img-responsive" alt="Pippo" src="assets/images/pippo.jpg" class="img-responsive borderBlack">
 	</div>
 	<div class="col-md-10">
 		<ul class="list-unstiled">
