--- a/Compito_AngularJs/assets/partials/form.htm
+++ b/Compito_AngularJs/assets/partials/form.htm
@@ -18,7 +18,7 @@
 					<div class="col-md-4">
 						<label class="maroon">Data</label>
 						<div class="input-group date datepicker" id="calendar"  data-date-format="dd-mm-yyyy">
-							<input type="text" class="form-control" placeholder="dd/mm/yyyy" ng-model="person.birthday" required />
+							<input type="text" class="form-control" placeholder="dd/mm/yyyy" ng-model="person.birthday"/>
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-calendar"></span>
 							</span>
