--- a/WorkTasks/assets/partials/study-table.html
+++ b/WorkTasks/assets/partials/study-table.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div class="panel" ng-controller="studyTable">
 	<div class="col-md-10">
 		<div class="panel-heading text-center">{{studyTableCtrl.activeTopic[0]}}</div>
 		<div class="panel-body">
