--- a/WorkTasks/assets/partials/studyTable.html
+++ b/WorkTasks/assets/partials/studyTable.html
@@ -69,6 +69,14 @@
 						</div>
 					</div>
 					<div class="form-group">
+						<div class="col-md-3">
+							<label class="control-label">Note:</label>
+						</div>
+						<div class="col-md-9">
+							<textarea class="form-control" rows="3" ng-model="newTopic.notes" placeholder="Aggiungi delle note"></textarea>
+						</div>
+					</div>
+					<div class="form-group">
 						<div class="col-md-offset-3 col-md-9">
 							<label> <input type="checkbox" ng-model="newTopic.read"> L'hai letto?
 							</label>
