--- a/Rubrica/assets/partials/contacts.html
+++ b/Rubrica/assets/partials/contacts.html
@@ -1,5 +1,5 @@
-<div class="panel">
-	<div class="panel-heading">Contatti</div>
+<div class="panel panel-info">
+	<div class="panel-heading text-center panel-title-shadow">Contatti</div>
 	<table ng-repeat="contact in contacts">
 		<thead>
 			<tr>
