--- a/Rpg/assets/partials/map.html
+++ b/Rpg/assets/partials/map.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-init="init();">
 	<div class="col-xs-10">
 		<div class="panel panel-default">
 			<div class="panel-heading">REGIONE</div>
